--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/passport": "^11.2",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "mcamara/laravel-localization": "^1.7",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
